refactor mcs collection service